# student_management_system

./: CMakeLists.txt  README.md  admin.cpp  admin.h  database.cpp  database.h  database_viewer.cpp  database_viewer.h  login.cpp  login.h  main.cpp  marks.cpp  marks.h  student.cpp  student.h
